0.023 2024-12-05
  [New Features]
    * Add Net::SSLeay::X509_VERIFY_PARAM#clear_flags method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#get_flags method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#get_hostflags method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#set1_email method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#set1_ip_asc method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#new method.
  [Changes]
    * Change the default value of $namele in Net::SSLeay::X509_VERIFY_PARAM#set1_host method.
      [Before]
      method set1_host : int ($name : string, $namelen : int = 0);
      
      [After]
      method set1_host : int ($name : string, $namelen : int = -1);
      
0.022 2024-12-04
  [New Features]
    * Add Net::SSLeay::DH#new method.
    * Add Net::SSLeay::EVP_PKEY#new method.
    * Add Net::SSLeay::PEM#read_bio_PrivateKey method.
    * Add Net::SSLeay::EVP#sha256 method.
    * Add Net::SSLeay::EVP#sha512 method.
    * Add Net::SSLeay::PKCS12#new method.
    * Add Net::SSLeay::DER#(i2d_TYPE|d2i_TYPE|d2i_TYPE_bio) methods.
    * Add Net::SSLeay::PKCS12#parse method.
    * Add Net::SSLeay::OPENSSL#init_crypto method.
    
  [Incompatible Changes]
    * Add an exception to Net::SSLeay::OBJ#nid2obj method.
    * Add an exception to Net::SSLeay::OBJ#obj2nid method.
  [Bug Fix]
    * Fix bugs in methods in Net::SSLeay::OBJ class.
  [Changes]
    * Remove SSL_CIPHER class.
  [Requirement Changes]
    * Require SPVM::FindBin 0.031 for tests.
0.021 2024-12-02
  [New Features]
    * Add Net::SSLeay::ASN1_ENUMERATED#new method.
    * Add Net::SSLeay::ASN1_ENUMERATED#set_int64 method.
    * Add Net::SSLeay::ASN1_ENUMERATED#get_int64 method.
    * Add Net::SSLeay::ASN1_INTEGER#new method.
    * Add Net::SSLeay::ASN1_INTEGER#set_int64 method.
    * Add Net::SSLeay::ASN1_INTEGER#get_int64 method.
    * Add Net::SSLeay::ASN1_OBJECT#new method.
    * Add Net::SSLeay::ASN1_STRING#new method.
    * Add Net::SSLeay::ASN1_STRING#set method.