@@ -12,6 +12,8 @@ class Net::SSLeay::X509_NAME_ENTRY {
   has ref_x509_name : Net::SSLeay::X509_NAME;
   
   # Class Methods
+  native static method new : Net::SSLeay::X509_NAME_ENTRY ();
+  
   private static method new_with_pointer : Net::SSLeay::X509_NAME_ENTRY ($pointer : Address, $options : object[] = undef) {
     
     my $self = new Net::SSLeay::X509_NAME_ENTRY;
